cloudformation/07.asg-alb-cft.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: "This CloudFormation template creates a Web Instances thru ASG and attach the instances to Application load balancer. It uses the vpc-aws-cft stack VPC and Subnet exports"
Mappings:
    Region2AMIMap:
      us-east-1:
        ubuntu: "ami-0a313d6098716f372"
      eu-west-1:
        ubuntu: "ami-xxxxxxxx"       
      ap-southeast-2:
        ubuntu: "ami-xxxxxxxx"
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      -
        Label:
          default: "Instance Parameters"        
        Parameters:
          - KeyPair
          - TerminationPolicy
      -
        Label: 
          default: "Other Parameters"
        Parameters:
          - Environment
          - NetworkStackName
Parameters:
    NetworkStackName:
        Description: Name of an active CloudFormation stack that contains the networking resources.
        Type: String
        AllowedPattern: "^[a-zA-Z][-a-zA-Z0-9]*$"
        Default: NetworkStack
    KeyPair:
        Description: EC2 KeyPair
        Type: AWS::EC2::KeyPair::KeyName
        ConstraintDescription: Existing EC2 KeyPair.
    TerminationPolicy:
       Description: Choose EC2 Termination Policy
       Type: String
       Default: False
       AllowedValues: 
        - True
        - False
    Environment:
       Description: To set the route53 Record Set
       Type: String
       Default: dev        
Resources:
    WebEC2SecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupName: !Join ["-",["Ref": "AWS::StackName", !Ref 'Environment', "web"]]
        GroupDescription: !Join ["-",["Ref": "AWS::StackName", !Ref 'Environment', "web"]]
        SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: '22'
           ToPort: '22'
           CidrIp: 0.0.0.0/0 
         - IpProtocol: tcp
           FromPort: '443'
           ToPort: '443'
           CidrIp: 0.0.0.0/0 
         - IpProtocol: tcp
           FromPort: '80'
           ToPort: '80'
           CidrIp: 0.0.0.0/0             
        SecurityGroupEgress:
         - IpProtocol: '-1'
           CidrIp: 0.0.0.0/0
        VpcId:
          Fn::ImportValue:
            Fn::Sub: "${NetworkStackName}-VPCID"
        Tags:
         - Key: "Name"
           Value: !Join ["-",["Ref": "AWS::StackName", !Ref 'Environment', "web"]]
    WebALBSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupName: !Join ["-",["Ref": "AWS::StackName", "web-alb"]]
        GroupDescription: !Join ["-",["Ref": "AWS::StackName", !Ref 'Environment', "web-alb"]]
        SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: '80'
           ToPort: '80'
           CidrIp: 0.0.0.0/0             
        SecurityGroupEgress:
         - IpProtocol: '-1'
           CidrIp: 0.0.0.0/0
        VpcId:
          Fn::ImportValue:
            Fn::Sub: "${NetworkStackName}-VPCID"
        Tags:
         - Key: "Name"
           Value: !Join ["-",["Ref": "AWS::StackName", !Ref 'Environment', "web-elb"]]           
    WebRole: 
      Type: AWS::IAM::Role
      Properties:
        RoleName: !Join ["-",["Ref": "AWS::StackName", !Ref 'Environment', "web"]]
        AssumeRolePolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Principal:
              Service:
              - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
        Path: "/"
        Policies:
         -        
            PolicyName: "EBSVolumePolicy"
            PolicyDocument:
                Version: "2012-10-17"
                Statement:
                  - 
                    Effect: "Allow"
                    Action: 
                     - "ec2:DescribeInstances"
                     - "ec2:DescribeVolumes"                     
                     - "ec2:ModifyVolumeAttribute"
                     - "ec2:CreateTags"                     
                     - "ec2:AttachVolume"
                     - "ec2:CreateVolume"
                    Resource: "*"                     
        ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM
    WebInstanceProfile:
      Type: "AWS::IAM::InstanceProfile"
      Properties:
        Roles: 
          - Ref: WebRole    
    WebAppLoadBalancer:
      Type: AWS::ElasticLoadBalancingV2::LoadBalancer
      Properties:
        Name: !Join ["-",["Ref": "AWS::StackName", !Ref 'Environment', "web"]]
        Subnets: 
          - {'Fn::ImportValue': !Sub '${NetworkStackName}-PubSubnet1'}
          - {'Fn::ImportValue': !Sub '${NetworkStackName}-PubSubnet2'}
          - {'Fn::ImportValue': !Sub '${NetworkStackName}-PubSubnet3'}    
        SecurityGroups: 
          - Ref: WebALBSecurityGroup
        Tags:
         - Key: "Name"
           Value: !Join ["-",["Ref": "AWS::StackName", !Ref 'Environment', "web"]]
    WebLoadBalancerListener:
        Type: AWS::ElasticLoadBalancingV2::Listener
        Properties:
            LoadBalancerArn: !Ref WebAppLoadBalancer
            Port: '80'
            Protocol: HTTP
            DefaultActions: 
              - Type: forward
                TargetGroupArn: !Ref WebTargetGroup     
    WebTargetGroup:
        Type: AWS::ElasticLoadBalancingV2::TargetGroup
        Properties:
            Name: !Join ["-",["Ref": "AWS::StackName", !Ref 'Environment', "web"]]
            TargetGroupAttributes:
              - Key: deregistration_delay.timeout_seconds
                Value: '300'
            VpcId:
              Fn::ImportValue:
                Fn::Sub: "${NetworkStackName}-VPCID"
            Port: '80'
            Protocol: HTTP
            Matcher: 
                HttpCode: '200'
            HealthCheckIntervalSeconds: '30'
            HealthCheckPath: /healthcheck.html
            HealthCheckProtocol: HTTP
            HealthCheckTimeoutSeconds: '5'
            HealthyThresholdCount: '5'
            UnhealthyThresholdCount: '2'
            HealthCheckPort: '80'
            Tags:
             - Key: "Name"
               Value: !Join ["-",["Ref": "AWS::StackName", !Ref 'Environment', "web"]]   
    WebLaunchConfig:
        Type: AWS::AutoScaling::LaunchConfiguration
        Properties:
          LaunchConfigurationName: !Join ["-",["Ref": "AWS::StackName", !Ref 'Environment', "web-v1"]]
          KeyName: 
            Ref: KeyPair
          ImageId: !FindInMap
            - Region2AMIMap
            - !Ref 'AWS::Region'
            - ubuntu
          InstanceType: t2.micro
          AssociatePublicIpAddress: 'true'
          SecurityGroups:
           - Ref: WebEC2SecurityGroup
          IamInstanceProfile: 
             Ref: WebInstanceProfile            
          InstanceMonitoring: 'false' 
          UserData:
            Fn::Base64: !Sub |
             #!/bin/bash -ex
             sudo apt-get -y update
             sudo apt install python-pip -y
             sudo pip install --upgrade pip
             sudo pip install awscli
             instanceid=`curl http://169.254.169.254/latest/meta-data/instance-id` 
             sleep 60
             sudo snap install amazon-ssm-agent --classic
             sudo systemctl start snap.amazon-ssm-agent.amazon-ssm-agent.service
             sudo systemctl stop snap.amazon-ssm-agent.amazon-ssm-agent.service
             sudo snap start amazon-ssm-agent
             sudo apt install apache2 -y
             sudo ufw allow 'Apache'
             sudo systemctl start apache2
             echo "Health Check from $instanceid" | sudo tee /var/www/html/healthcheck.html          
    WebAutoScalingGroup:
        Type: AWS::AutoScaling::AutoScalingGroup    
        Properties:
          AutoScalingGroupName: !Join ["-",["Ref": "AWS::StackName", !Ref 'Environment', "web"]]        
          VPCZoneIdentifier:  
              - {'Fn::ImportValue': !Sub '${NetworkStackName}-PriSubnet1'}
              - {'Fn::ImportValue': !Sub '${NetworkStackName}-PriSubnet2'}
              - {'Fn::ImportValue': !Sub '${NetworkStackName}-PriSubnet3'}
          HealthCheckType: EC2
          HealthCheckGracePeriod: '300'
          TargetGroupARNs:
           - Ref: WebTargetGroup
          Cooldown: '300'
          LaunchConfigurationName: 
            Ref: WebLaunchConfig         
          MaxSize: '2'
          MinSize: '1'
          DesiredCapacity: '2'
          Tags:
           - Key: "Name"
             Value: !Join ["-",["Ref": "AWS::StackName", !Ref 'Environment', "web"]]       
             PropagateAtLaunch: 'true' 
           - Key: "Environment"
             Value: !Join ["-",[!Ref 'Environment']]                   
             PropagateAtLaunch: 'true'           
Outputs:
    StackALB:
      Description: Load Balancer Name
      Value: !Ref WebAppLoadBalancer
      Export:
        Name: !Sub "${AWS::StackName}-alb"          
    StackALBDNS:
      Description: ELB DNS Endpoint
      Value: !GetAtt [WebAppLoadBalancer, DNSName]
      Export:
        Name: !Sub "${AWS::StackName}-albdns"
